--- a/style.css
+++ b/style.css
@@ -1,4 +1,25 @@
 body {
   margin: 0;
   padding: 0;
+  height: 100vh;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 4fr;
+}
+
+.sidebar {
+  grid-row: 1 / 3;
+  grid-column: 1 / 2;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  height: 100vh;
+
+}
+
+.header {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
 }
