--- a/style.css
+++ b/style.css
@@ -14,9 +14,18 @@ body {
   grid-row: 1 / 3;
   grid-column: 1 / 2;
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(18, 1fr);
   height: 100vh;
+  background-color: rgb(30, 175, 47);
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
+.item-container {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  padding: 0 2vw 0 2vw;
+  align-items: center;
 }
 
 .header {
