--- a/style.css
+++ b/style.css
@@ -14,11 +14,22 @@ body {
   grid-row: 1 / 3;
   grid-column: 1 / 2;
   display: grid;
-  grid-template-rows: repeat(18, 1fr);
+  box-sizing: border-box;
+  grid-template-rows: repeat(5, 1fr);
   height: 100vh;
-  background-color: rgb(30, 175, 47);
+  background-color: rgb(21, 113, 32);
   color: white;
   font-family: Arial, Helvetica, sans-serif;
+  border: 5px solid white;
+  border-radius: 30px;
+}
+
+.hero-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  font-size: 32px;
+  align-items: start;
+  padding: 3vh 1vw 0 1vw;
 }
 
 .item-container {
@@ -37,6 +48,6 @@ ion-icon {
   font-size: 32px;
 }
 
-/* .white {
-  color: white;
-} */
+.logo ion-icon {
+  font-size: 64px;
+}
