--- a/style.css
+++ b/style.css
@@ -16,13 +16,15 @@ body {
   display: grid;
   box-sizing: border-box;
   grid-template-rows: repeat(5, 1fr);
-  height: 100vh;
+  margin: 5px;
+  height: calc(100vh - 10px);
   background-color: rgb(21, 113, 32);
   color: white;
   font-family: Arial, Helvetica, sans-serif;
-  border: 5px solid white;
   border-radius: 30px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
+
 
 .hero-container {
   display: grid;
