--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+@import url(https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap);
+
+
 body {
   margin: 0;
   padding: 0;
   height: 100vh;
+  font-family: "Monstserrat", sans-serif;
 }
 
 .container {
@@ -17,10 +21,11 @@ body {
   box-sizing: border-box;
   grid-template-rows: repeat(5, 1fr);
   margin: 5px;
+  max-width: 350px;
   height: calc(100vh - 10px);
   background-color: rgb(21, 113, 32);
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
   border-radius: 30px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
@@ -45,11 +50,13 @@ body {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
   display: grid;
+  min-width: calc(100vw - 360px);
   grid-template-rows: 1fr 3fr;
   margin: 5px 5px 5px 0;
   padding: 15px;
   border-radius: 30px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  font-weight: 900;
 }
 
 .top-header {
@@ -82,6 +89,57 @@ body {
 .bottom-header {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+}
+
+.welcome {
+  display: grid;
+  grid-template: repeat(2, 1fr) / repeat(3, 1fr);
+  align-items: center;
+}
+
+.welcome .avatar {
+  display: flex;
+  grid-row: 1 / 3;
+  align-items: center;
+  justify-content: center;
+}
+
+.user-greeting {
+  grid-column: 2 / 4;
+  grid-row: 1 / 3;
+  display: flex;
+  flex-direction: column;
+}
+
+.user-greeting p {
+  font-size: 16px;
+  margin: 0;
+}
+
+.user-name p {
+  font-size: 32px;
+}
+
+
+
+.button-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+button {
+  border: none;
+  color: white;
+  background-color: green;
+  border-radius: 15px;
+  height: 32px;
+  width: max(100px, 4vw);
+  padding: 0 1vw 0 1vw;
+  margin: 0 1vw 0 1vw;
+  font-size: 14px;
 }
 
 ion-icon {
