--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
   font-family: "Monstserrat", sans-serif;
 }
 
 .container {
   display: grid;
+  /* height: 100vh; */
   grid-template-columns: 1fr 3fr;
   grid-template-rows: 1fr 4fr;
 }
@@ -50,6 +50,8 @@ body {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
   display: grid;
+  max-height: 150px;
+  justify-content: space-between;
   min-width: calc(100vw - 360px);
   grid-template-rows: 1fr 3fr;
   margin: 5px 5px 5px 0;
@@ -66,10 +68,10 @@ body {
 }
 
 .top-header-left {
-  grid-column: 1 / 3;
+  grid-column: 1 / 4;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: start;
 }
 
 .top-header-right {
@@ -82,14 +84,18 @@ body {
 .search-bar {
   background-color: rgb(203, 239, 203);
   height: 28px;
-  width: max(300px, 30vw);
+  width: max(300px, 50vw);
   border-radius: 14px;
+  margin: 0 3vw 0 1vw;
 }
 
 .bottom-header {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
 }
 
 .welcome {
