--- a/style.css
+++ b/style.css
@@ -91,9 +91,8 @@ body {
 
 .bottom-header {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 3fr 1fr 3fr;
   align-items: center;
-  justify-content: center;
   padding: 0;
   margin: 0;
 }
@@ -130,9 +129,9 @@ body {
 
 
 .button-container {
+  grid-column: 3 / 4;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
+  justify-content: end;
   flex-wrap: wrap;
 }
 
@@ -140,9 +139,9 @@ button {
   border: none;
   color: white;
   background-color: green;
-  border-radius: 15px;
+  border-radius: 24px;
   height: 32px;
-  width: max(100px, 4vw);
+  width: max(75px, 4vw);
   padding: 0 1vw 0 1vw;
   margin: 0 1vw 0 1vw;
   font-size: 14px;
