--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Monstserrat", sans-serif;
+  background-color: rgb(207, 226, 205);
 }
 
 .container {
   display: grid;
   /* height: 100vh; */
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr 4fr;
+  grid-template-rows: 200px 1fr;
 }
 
 .sidebar {
@@ -54,11 +55,12 @@ body {
   justify-content: space-between;
   min-width: calc(100vw - 360px);
   grid-template-rows: 1fr 3fr;
-  margin: 5px 5px 5px 0;
+  margin: 5px 5px 0 0;
   padding: 15px;
   border-radius: 30px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   font-weight: 900;
+  background-color: white;
 }
 
 .top-header {
@@ -126,8 +128,6 @@ body {
   font-size: 32px;
 }
 
-
-
 .button-container {
   grid-column: 3 / 4;
   display: flex;
@@ -157,4 +157,59 @@ ion-icon {
 
 .logo ion-icon {
   font-size: 64px;
+}
+
+.main-content {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+
+.courses {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5px;
+}
+
+.courses-text {
+  grid-column: 1 / 3;
+}
+
+.card {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  box-sizing: border-box;
+  padding: 0 1vw 0 0;
+  border-radius: 30px;
+  height: 15vh;
+  text-align: end;
+  background-size: 25vw 200px;
+  width: 25vw;
+  color: white;
+  font-weight: 700;
+  font-style: italic;
+}
+
+#kiawah {
+  background-image: url(./images/kiawah.webp);
+}
+
+#crystal-downs {
+  background-image: url(./images/crystal-downs.webp);
+}
+
+#pine-valley {
+  background-image: url(./images/pine-valley.webp);
+}
+
+#augusta {
+  background-image: url(./images/augusta.webp);
+}
+
+#pebble-beach {
+  background-image: url(./images/pebble-beach.webp);
+}
+
+#cypress-point {
+  background-image: url(./images/cypress-point.webp);
 }
