--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ ion-icon {
 }
 
 .courses {
+  grid-row: 1 / 3;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 5px;
@@ -172,6 +173,9 @@ ion-icon {
 
 .courses-text {
   grid-column: 1 / 3;
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin: 0;
 }
 
 .card {
@@ -186,9 +190,12 @@ ion-icon {
   background-size: 25vw 200px;
   width: 25vw;
   color: white;
+  font-size: 2rem;
   font-weight: 700;
   font-style: italic;
+  text-shadow: 0 0 1rem rgb(0, 0, 0);
 }
+
 
 #kiawah {
   background-image: url(./images/kiawah.webp);
