--- a/style.css
+++ b/style.css
@@ -167,15 +167,16 @@ ion-icon {
 .courses {
   grid-row: 1 / 3;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: auto 1fr;
   gap: 5px;
 }
 
-.courses-text {
+.section-text {
   grid-column: 1 / 3;
-  font-size: 2.5rem;
+  font-size: 1rem;
   font-weight: 700;
   margin: 0;
+  color: rgb(65, 87, 60);
 }
 
 .card {
@@ -195,7 +196,6 @@ ion-icon {
   font-style: italic;
   text-shadow: 0 0 1rem rgb(0, 0, 0);
 }
-
 
 #kiawah {
   background-image: url(./images/kiawah.webp);
@@ -219,4 +219,18 @@ ion-icon {
 
 #cypress-point {
   background-image: url(./images/cypress-point.webp);
+}
+
+.announcements {
+  display: grid;
+  grid-template-rows: repeat(2 1fr);
+}
+
+.ann-container {
+  display: grid;
+  grid-template-rows: repeat(3 1fr);
+  background-color: white;
+  border-radius: 30px;
+  padding: 1rem;
+  font-size: .75rem;
 }
