--- a/style.css
+++ b/style.css
@@ -161,21 +161,24 @@ ion-icon {
 
 .main-content {
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 5fr 3fr;
+  grid-template-rows: 1fr 15fr 1fr 15fr;
 }
 
 .courses {
-  grid-row: 1 / 3;
+  grid-row: 2 / 4;
+  grid-column: 1 / 2;
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 5px;
+  margin-right: 5px;
 }
 
 .section-text {
-  grid-column: 1 / 3;
   font-size: 1rem;
   font-weight: 700;
   margin: 0;
+  padding: .5rem 0 0 .5rem;
   color: rgb(65, 87, 60);
 }
 
@@ -224,6 +227,7 @@ ion-icon {
 .announcements {
   display: grid;
   grid-template-rows: repeat(2 1fr);
+  margin-right: 5px;
 }
 
 .ann-container {
@@ -233,4 +237,20 @@ ion-icon {
   border-radius: 30px;
   padding: 1rem;
   font-size: .75rem;
+}
+
+.announcement {
+  border-bottom: 1px solid rgb(207 226 205);
+}
+
+.announcement p:first-child {
+  font-weight: 700;
+}
+
+.announcement:last-child {
+  border-bottom: none; /* Remove border from last announcement */
+}
+
+.trending {
+  grid-column: 2 / 3;
 }
