--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ ion-icon {
 .main-content {
   display: grid;
   grid-template-columns: 5fr 3fr;
-  grid-template-rows: 1fr 15fr 1fr 15fr;
+  grid-template-rows: 1fr 15fr 1fr 12fr;
 }
 
 .courses {
@@ -227,7 +227,7 @@ ion-icon {
 .announcements {
   display: grid;
   grid-template-rows: repeat(2 1fr);
-  margin-right: 5px;
+  margin: 0 5px 1rem 0;
 }
 
 .ann-container {
@@ -253,4 +253,31 @@ ion-icon {
 
 .trending {
   grid-column: 2 / 3;
+  font-size: .75rem;
+  /* background-color: white; */
+  border-radius: 30px;
 }
+
+.trending-sub {
+  background-color: white;
+  border-radius: 30px;
+  padding: 1rem 0 1rem 1rem;
+  margin-right: 5px;
+}
+
+.trending-item {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.golfer {
+  grid-row: 1 / 3;
+  height: 3.5rem;
+  border-radius: 50%;
+}
+
+#tiger, #scottie, #jt {
+  object-fit: cover;
+  max-width: 3.5rem;
+}
+
