--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 .container {
   display: grid;
-  /* height: 100vh; */
+  height: 100vh;
   grid-template-columns: 1fr 3fr;
   grid-template-rows: 200px 1fr;
 }
@@ -161,17 +161,17 @@ ion-icon {
 
 .main-content {
   display: grid;
-  grid-template-columns: 5fr 3fr;
-  grid-template-rows: 1fr 15fr 1fr 12fr;
+  grid-template-columns: 5fr 2fr;
+  grid-template-rows: 1fr 15fr;
 }
 
 .courses {
   grid-row: 2 / 4;
   grid-column: 1 / 2;
   display: grid;
-  grid-template-columns: auto 1fr;
-  gap: 5px;
-  margin-right: 5px;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  margin-right: 1rem;
 }
 
 .section-text {
@@ -189,10 +189,10 @@ ion-icon {
   box-sizing: border-box;
   padding: 0 1vw 0 0;
   border-radius: 30px;
-  height: 15vh;
+  height: 20vh;
   text-align: end;
-  background-size: 25vw 200px;
-  width: 25vw;
+  background-size: 30vw 20vh;
+  width: 30vw;
   color: white;
   font-size: 2rem;
   font-weight: 700;
@@ -222,6 +222,12 @@ ion-icon {
 
 #cypress-point {
   background-image: url(./images/cypress-point.webp);
+}
+
+.mc-right {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .announcements {
